// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openai > openai chat > llm 1`] = `
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "Paris.",
        "refusal": null,
        "role": "assistant",
      },
    },
  ],
  "created": 1762860490,
  "id": "chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb",
  "model": "gpt-5-2025-08-07",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": null,
  "usage": {
    "completion_tokens": 11,
    "completion_tokens_details": {
      "accepted_prediction_tokens": 0,
      "audio_tokens": 0,
      "reasoning_tokens": 0,
      "rejected_prediction_tokens": 0,
    },
    "prompt_tokens": 23,
    "prompt_tokens_details": {
      "audio_tokens": 0,
      "cached_tokens": 0,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.00013875,
    },
    "total_tokens": 34,
  },
}
`;

exports[`openai > openai chat > span 1`] = `
[
  {
    "key": "logfire.msg",
    "value": {
      "stringValue": "chat gpt-5-2025-08-07",
    },
  },
  {
    "key": "logfire.json_schema",
    "value": {
      "stringValue": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{"type":"number"}}}",
    },
  },
  {
    "key": "logfire.level_num",
    "value": {
      "intValue": 9,
    },
  },
  {
    "key": "gen_ai.operation.name",
    "value": {
      "stringValue": "chat",
    },
  },
  {
    "key": "gen_ai.request.model",
    "value": {
      "stringValue": "gpt-5",
    },
  },
  {
    "key": "gen_ai.system",
    "value": {
      "stringValue": "openai",
    },
  },
  {
    "key": "gen_ai.request.max_tokens",
    "value": {
      "intValue": 1024,
    },
  },
  {
    "key": "gen_ai.request.top_k",
    "value": {},
  },
  {
    "key": "gen_ai.request.top_p",
    "value": {},
  },
  {
    "key": "gen_ai.request.temperature",
    "value": {},
  },
  {
    "key": "gen_ai.request.stop_sequences",
    "value": {},
  },
  {
    "key": "gen_ai.request.seed",
    "value": {},
  },
  {
    "key": "gen_ai.response.finish_reasons",
    "value": {
      "arrayValue": {
        "values": [
          {
            "stringValue": "stop",
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.response.id",
    "value": {
      "stringValue": "chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb",
    },
  },
  {
    "key": "gen_ai.input.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "system",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "You are a helpful assistant.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "user",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "What is the capital of France?",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.output.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "assistant",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "Paris.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
                {
                  "key": "finish_reason",
                  "value": {
                    "stringValue": "stop",
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.system_instructions",
    "value": {},
  },
  {
    "key": "http.response.status_code",
    "value": {
      "intValue": 200,
    },
  },
  {
    "key": "http.request.body.text",
    "value": {
      "stringValue": "{
  "model": "gpt-5",
  "messages": [
    {
      "role": "developer",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "What is the capital of France?"
    }
  ],
  "max_completion_tokens": 1024
}",
    },
  },
  {
    "key": "http.response.body.text",
    "value": {
      "stringValue": "{"id":"chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb","object":"chat.completion","created":1762860490,"model":"gpt-5-2025-08-07","choices":[{"index":0,"message":{"role":"assistant","content":"Paris.","refusal":null,"annotations":[]},"finish_reason":"stop"}],"usage":{"prompt_tokens":23,"completion_tokens":11,"total_tokens":34,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0},"pydantic_ai_gateway":{"cost_estimate":0.00013875}},"service_tier":"default","system_fingerprint":null}",
    },
  },
  {
    "key": "gen_ai.response.model",
    "value": {
      "stringValue": "gpt-5-2025-08-07",
    },
  },
  {
    "key": "gen_ai.usage.input_tokens",
    "value": {
      "intValue": 23,
    },
  },
  {
    "key": "gen_ai.usage.cache_read_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_write_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_tokens",
    "value": {
      "intValue": 11,
    },
  },
  {
    "key": "gen_ai.usage.input_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_audio_read_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
]
`;

exports[`openai > openai chat legacy name > llm 1`] = `
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "Paris.",
        "refusal": null,
        "role": "assistant",
      },
    },
  ],
  "created": 1762860490,
  "id": "chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb",
  "model": "gpt-5-2025-08-07",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": null,
  "usage": {
    "completion_tokens": 11,
    "completion_tokens_details": {
      "accepted_prediction_tokens": 0,
      "audio_tokens": 0,
      "reasoning_tokens": 0,
      "rejected_prediction_tokens": 0,
    },
    "prompt_tokens": 23,
    "prompt_tokens_details": {
      "audio_tokens": 0,
      "cached_tokens": 0,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.00013875,
    },
    "total_tokens": 34,
  },
}
`;

exports[`openai > openai chat legacy name > span 1`] = `
[
  {
    "key": "logfire.msg",
    "value": {
      "stringValue": "chat gpt-5-2025-08-07",
    },
  },
  {
    "key": "logfire.json_schema",
    "value": {
      "stringValue": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{"type":"number"}}}",
    },
  },
  {
    "key": "logfire.level_num",
    "value": {
      "intValue": 9,
    },
  },
  {
    "key": "gen_ai.operation.name",
    "value": {
      "stringValue": "chat",
    },
  },
  {
    "key": "gen_ai.request.model",
    "value": {
      "stringValue": "gpt-5",
    },
  },
  {
    "key": "gen_ai.system",
    "value": {
      "stringValue": "openai",
    },
  },
  {
    "key": "gen_ai.request.max_tokens",
    "value": {
      "intValue": 1024,
    },
  },
  {
    "key": "gen_ai.request.top_k",
    "value": {},
  },
  {
    "key": "gen_ai.request.top_p",
    "value": {},
  },
  {
    "key": "gen_ai.request.temperature",
    "value": {},
  },
  {
    "key": "gen_ai.request.stop_sequences",
    "value": {},
  },
  {
    "key": "gen_ai.request.seed",
    "value": {},
  },
  {
    "key": "gen_ai.response.finish_reasons",
    "value": {
      "arrayValue": {
        "values": [
          {
            "stringValue": "stop",
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.response.id",
    "value": {
      "stringValue": "chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb",
    },
  },
  {
    "key": "gen_ai.input.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "system",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "You are a helpful assistant.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "user",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "What is the capital of France?",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.output.messages",
    "value": {
      "arrayValue": {
        "values": [
          {
            "kvlistValue": {
              "values": [
                {
                  "key": "role",
                  "value": {
                    "stringValue": "assistant",
                  },
                },
                {
                  "key": "parts",
                  "value": {
                    "arrayValue": {
                      "values": [
                        {
                          "kvlistValue": {
                            "values": [
                              {
                                "key": "type",
                                "value": {
                                  "stringValue": "text",
                                },
                              },
                              {
                                "key": "content",
                                "value": {
                                  "stringValue": "Paris.",
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
                {
                  "key": "finish_reason",
                  "value": {
                    "stringValue": "stop",
                  },
                },
              ],
            },
          },
        ],
      },
    },
  },
  {
    "key": "gen_ai.system_instructions",
    "value": {},
  },
  {
    "key": "http.response.status_code",
    "value": {
      "intValue": 200,
    },
  },
  {
    "key": "http.request.body.text",
    "value": {
      "stringValue": "{
  "model": "gpt-5",
  "messages": [
    {
      "role": "developer",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "What is the capital of France?"
    }
  ],
  "max_completion_tokens": 1024
}",
    },
  },
  {
    "key": "http.response.body.text",
    "value": {
      "stringValue": "{"id":"chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb","object":"chat.completion","created":1762860490,"model":"gpt-5-2025-08-07","choices":[{"index":0,"message":{"role":"assistant","content":"Paris.","refusal":null,"annotations":[]},"finish_reason":"stop"}],"usage":{"prompt_tokens":23,"completion_tokens":11,"total_tokens":34,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0},"pydantic_ai_gateway":{"cost_estimate":0.00013875}},"service_tier":"default","system_fingerprint":null}",
    },
  },
  {
    "key": "gen_ai.response.model",
    "value": {
      "stringValue": "gpt-5-2025-08-07",
    },
  },
  {
    "key": "gen_ai.usage.input_tokens",
    "value": {
      "intValue": 23,
    },
  },
  {
    "key": "gen_ai.usage.cache_read_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_write_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_tokens",
    "value": {
      "intValue": 11,
    },
  },
  {
    "key": "gen_ai.usage.input_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
  {
    "key": "gen_ai.usage.cache_audio_read_tokens",
    "value": {},
  },
  {
    "key": "gen_ai.usage.output_audio_tokens",
    "value": {
      "intValue": 0,
    },
  },
]
`;

exports[`openai > openai chat stream > chunks 1`] = `
[
  {
    "choices": [
      {
        "delta": {
          "content": "",
          "refusal": null,
          "role": "assistant",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1762860554,
    "id": "chatcmpl-CagqgcMC5BuFBbC8tkJpiQ8SnkdsO",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "MDpId38oCM",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [
      {
        "delta": {
          "content": "Paris",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1762860554,
    "id": "chatcmpl-CagqgcMC5BuFBbC8tkJpiQ8SnkdsO",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "HCdHjav",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [
      {
        "delta": {
          "content": ".",
        },
        "finish_reason": null,
        "index": 0,
      },
    ],
    "created": 1762860554,
    "id": "chatcmpl-CagqgcMC5BuFBbC8tkJpiQ8SnkdsO",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "2DbJDfge2l7",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [
      {
        "delta": {},
        "finish_reason": "stop",
        "index": 0,
      },
    ],
    "created": 1762860554,
    "id": "chatcmpl-CagqgcMC5BuFBbC8tkJpiQ8SnkdsO",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "Mg4E76",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": null,
  },
  {
    "choices": [],
    "created": 1762860554,
    "id": "chatcmpl-CagqgcMC5BuFBbC8tkJpiQ8SnkdsO",
    "model": "gpt-5-2025-08-07",
    "obfuscation": "zmlfl9RrKMq",
    "object": "chat.completion.chunk",
    "service_tier": "default",
    "system_fingerprint": null,
    "usage": {
      "completion_tokens": 11,
      "completion_tokens_details": {
        "accepted_prediction_tokens": 0,
        "audio_tokens": 0,
        "reasoning_tokens": 0,
        "rejected_prediction_tokens": 0,
      },
      "prompt_tokens": 23,
      "prompt_tokens_details": {
        "audio_tokens": 0,
        "cached_tokens": 0,
      },
      "total_tokens": 34,
    },
  },
]
`;

exports[`openai > openai chat stream > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.operation.name": "chat",
      "gen_ai.request.max_tokens": 1024,
      "gen_ai.request.model": "gpt-5",
      "gen_ai.response.id": "chatcmpl-CagqgcMC5BuFBbC8tkJpiQ8SnkdsO",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.input_audio_tokens": 0,
      "gen_ai.usage.input_tokens": 23,
      "gen_ai.usage.output_audio_tokens": 0,
      "gen_ai.usage.output_tokens": 11,
      "http.request.header.accept": "application/json",
      "http.request.header.authorization": "Bearer healthy",
      "http.request.header.content-length": "319",
      "http.request.header.content-type": "application/json",
      "http.request.header.user-agent": "OpenAI/JS 4.104.0",
      "http.request.header.x-stainless-arch": "unknown",
      "http.request.header.x-stainless-lang": "js",
      "http.request.header.x-stainless-os": "Unknown",
      "http.request.header.x-stainless-package-version": "4.104.0",
      "http.request.header.x-stainless-retry-count": "0",
      "http.request.header.x-stainless-runtime": "unknown",
      "http.request.header.x-stainless-runtime-version": "unknown",
      "http.request.header.x-stainless-timeout": "600",
      "http.request.method": "POST",
      "http.response.header.content-type": "text/event-stream; charset=utf-8",
      "http.response.header.server": "uvicorn",
      "http.response.header.transfer-encoding": "chunked",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.system":{"type":"string"},"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.response.model":{"type":"string"},"gen_ai.response.id":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.output_audio_tokens":{"type":"number"},"http.request.method":{"type":"string"},"url.full":{"type":"string"},"http.request.header.accept":{"type":"string"},"http.request.header.authorization":{"type":"string"},"http.request.header.content-length":{"type":"string"},"http.request.header.content-type":{"type":"string"},"http.request.header.user-agent":{"type":"string"},"http.request.header.x-stainless-arch":{"type":"string"},"http.request.header.x-stainless-lang":{"type":"string"},"http.request.header.x-stainless-os":{"type":"string"},"http.request.header.x-stainless-package-version":{"type":"string"},"http.request.header.x-stainless-retry-count":{"type":"string"},"http.request.header.x-stainless-runtime":{"type":"string"},"http.request.header.x-stainless-runtime-version":{"type":"string"},"http.request.header.x-stainless-timeout":{"type":"string"},"http.response.status_code":{"type":"number"},"http.response.header.content-type":{"type":"string"},"http.response.header.server":{"type":"string"},"http.response.header.transfer-encoding":{"type":"string"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5",
      "url.full": "https://example.com/openai/chat/completions",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses > llm 1`] = `
{
  "background": false,
  "billing": {
    "payer": "developer",
  },
  "created_at": 1762860501,
  "error": null,
  "id": "resp_06980adb25617f1f0069131dd594748191acfa111979088ba1",
  "incomplete_details": null,
  "instructions": "reply concisely",
  "max_output_tokens": null,
  "max_tool_calls": null,
  "metadata": {},
  "model": "gpt-5-2025-08-07",
  "object": "response",
  "output": [
    {
      "id": "rs_06980adb25617f1f0069131dd62a988191b7246fab30360669",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Usually blue in daytime, but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night.",
          "type": "output_text",
        },
      ],
      "id": "msg_06980adb25617f1f0069131ddbb65081919889ee4ba15e0ec4",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
  ],
  "output_text": "Usually blue in daytime, but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night.",
  "parallel_tool_calls": true,
  "previous_response_id": null,
  "prompt_cache_key": null,
  "prompt_cache_retention": null,
  "reasoning": {
    "effort": "medium",
    "summary": null,
  },
  "safety_identifier": null,
  "service_tier": "default",
  "status": "completed",
  "store": true,
  "temperature": 1,
  "text": {
    "format": {
      "type": "text",
    },
    "verbosity": "medium",
  },
  "tool_choice": "auto",
  "tools": [],
  "top_logprobs": 0,
  "top_p": 1,
  "truncation": "disabled",
  "usage": {
    "input_tokens": 20,
    "input_tokens_details": {
      "cached_tokens": 0,
    },
    "output_tokens": 160,
    "output_tokens_details": {
      "reasoning_tokens": 128,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.0016250000000000001,
    },
    "total_tokens": 180,
  },
  "user": null,
}
`;

exports[`openai > openai responses > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "what color is the sky?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": [
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "content": "Usually blue in daytime, but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
      ],
      "gen_ai.request.max_tokens": {},
      "gen_ai.request.model": "gpt-5",
      "gen_ai.request.seed": {},
      "gen_ai.request.stop_sequences": {},
      "gen_ai.request.temperature": {},
      "gen_ai.request.top_k": {},
      "gen_ai.request.top_p": {},
      "gen_ai.response.finish_reasons": {},
      "gen_ai.response.id": "resp_06980adb25617f1f0069131dd594748191acfa111979088ba1",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.system_instructions": {},
      "gen_ai.usage.cache_audio_read_tokens": {},
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.cache_write_tokens": {},
      "gen_ai.usage.input_audio_tokens": {},
      "gen_ai.usage.input_tokens": 20,
      "gen_ai.usage.output_audio_tokens": {},
      "gen_ai.usage.output_tokens": 160,
      "http.request.body.text": "{
  "model": "gpt-5",
  "instructions": "reply concisely",
  "input": "what color is the sky?"
}",
      "http.response.body.text": "{"id":"resp_06980adb25617f1f0069131dd594748191acfa111979088ba1","object":"response","created_at":1762860501,"status":"completed","background":false,"billing":{"payer":"developer"},"error":null,"incomplete_details":null,"instructions":"reply concisely","max_output_tokens":null,"max_tool_calls":null,"model":"gpt-5-2025-08-07","output":[{"id":"rs_06980adb25617f1f0069131dd62a988191b7246fab30360669","type":"reasoning","summary":[]},{"id":"msg_06980adb25617f1f0069131ddbb65081919889ee4ba15e0ec4","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"Usually blue in daytime, but it can be red/orange at sunrise/sunset, gray when cloudy, and black at night."}],"role":"assistant"}],"parallel_tool_calls":true,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":"medium","summary":null},"safety_identifier":null,"service_tier":"default","store":true,"temperature":1,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1,"truncation":"disabled","usage":{"input_tokens":20,"input_tokens_details":{"cached_tokens":0},"output_tokens":160,"output_tokens_details":{"reasoning_tokens":128},"total_tokens":180,"pydantic_ai_gateway":{"cost_estimate":0.0016250000000000001}},"user":null,"metadata":{}}",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5-2025-08-07",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5-2025-08-07",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses legacy name > llm 1`] = `
{
  "choices": [
    {
      "finish_reason": "stop",
      "index": 0,
      "message": {
        "annotations": [],
        "content": "Paris.",
        "refusal": null,
        "role": "assistant",
      },
    },
  ],
  "created": 1762860490,
  "id": "chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb",
  "model": "gpt-5-2025-08-07",
  "object": "chat.completion",
  "service_tier": "default",
  "system_fingerprint": null,
  "usage": {
    "completion_tokens": 11,
    "completion_tokens_details": {
      "accepted_prediction_tokens": 0,
      "audio_tokens": 0,
      "reasoning_tokens": 0,
      "rejected_prediction_tokens": 0,
    },
    "prompt_tokens": 23,
    "prompt_tokens_details": {
      "audio_tokens": 0,
      "cached_tokens": 0,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.00013875,
    },
    "total_tokens": 34,
  },
}
`;

exports[`openai > openai responses legacy name > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "You are a helpful assistant.",
              "type": "text",
            },
          ],
          "role": "system",
        },
        {
          "parts": [
            {
              "content": "What is the capital of France?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": [
        {
          "finish_reason": "stop",
          "parts": [
            {
              "content": "Paris.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
      ],
      "gen_ai.request.max_tokens": 1024,
      "gen_ai.request.model": "gpt-5",
      "gen_ai.request.seed": {},
      "gen_ai.request.stop_sequences": {},
      "gen_ai.request.temperature": {},
      "gen_ai.request.top_k": {},
      "gen_ai.request.top_p": {},
      "gen_ai.response.finish_reasons": [
        "stop",
      ],
      "gen_ai.response.id": "chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.system_instructions": {},
      "gen_ai.usage.cache_audio_read_tokens": {},
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.cache_write_tokens": {},
      "gen_ai.usage.input_audio_tokens": 0,
      "gen_ai.usage.input_tokens": 23,
      "gen_ai.usage.output_audio_tokens": 0,
      "gen_ai.usage.output_tokens": 11,
      "http.request.body.text": "{
  "model": "gpt-5",
  "messages": [
    {
      "role": "developer",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "What is the capital of France?"
    }
  ],
  "max_completion_tokens": 1024
}",
      "http.response.body.text": "{"id":"chatcmpl-CagpeM1SJL1btImFBBsJ3DlGZ2nKb","object":"chat.completion","created":1762860490,"model":"gpt-5-2025-08-07","choices":[{"index":0,"message":{"role":"assistant","content":"Paris.","refusal":null,"annotations":[]},"finish_reason":"stop"}],"usage":{"prompt_tokens":23,"completion_tokens":11,"total_tokens":34,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0},"pydantic_ai_gateway":{"cost_estimate":0.00013875}},"service_tier":"default","system_fingerprint":null}",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{"type":"number"},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{"type":"number"},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{"type":"number"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5-2025-08-07",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5-2025-08-07",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses stream > chunks 1`] = `
[
  {
    "response": {
      "background": false,
      "created_at": 1762860556,
      "error": null,
      "id": "resp_05e9f6e35bff13970069131e0c3d6881a0a0a473b7052b7b42",
      "incomplete_details": null,
      "instructions": "reply concisely",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "gpt-5-2025-08-07",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "prompt_cache_retention": null,
      "reasoning": {
        "effort": "medium",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "auto",
      "status": "in_progress",
      "store": true,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
        "verbosity": "medium",
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
      "user": null,
    },
    "sequence_number": 0,
    "type": "response.created",
  },
  {
    "response": {
      "background": false,
      "created_at": 1762860556,
      "error": null,
      "id": "resp_05e9f6e35bff13970069131e0c3d6881a0a0a473b7052b7b42",
      "incomplete_details": null,
      "instructions": "reply concisely",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "gpt-5-2025-08-07",
      "object": "response",
      "output": [],
      "parallel_tool_calls": true,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "prompt_cache_retention": null,
      "reasoning": {
        "effort": "medium",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "auto",
      "status": "in_progress",
      "store": true,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
        "verbosity": "medium",
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": null,
      "user": null,
    },
    "sequence_number": 1,
    "type": "response.in_progress",
  },
  {
    "item": {
      "id": "rs_05e9f6e35bff13970069131e0c7fac81a099cb84a46c036f3e",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 2,
    "type": "response.output_item.added",
  },
  {
    "item": {
      "id": "rs_05e9f6e35bff13970069131e0c7fac81a099cb84a46c036f3e",
      "summary": [],
      "type": "reasoning",
    },
    "output_index": 0,
    "sequence_number": 3,
    "type": "response.output_item.done",
  },
  {
    "item": {
      "content": [],
      "id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
      "role": "assistant",
      "status": "in_progress",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 4,
    "type": "response.output_item.added",
  },
  {
    "content_index": 0,
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "",
      "type": "output_text",
    },
    "sequence_number": 5,
    "type": "response.content_part.added",
  },
  {
    "content_index": 0,
    "delta": "Usually",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "GRSCr6cdG",
    "output_index": 1,
    "sequence_number": 6,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " blue",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "vUSmzaWDHkC",
    "output_index": 1,
    "sequence_number": 7,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " during",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "920kZst40",
    "output_index": 1,
    "sequence_number": 8,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " the",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "q0EeCwDS3MH2",
    "output_index": 1,
    "sequence_number": 9,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " day",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "Xtx2X9q57puy",
    "output_index": 1,
    "sequence_number": 10,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ";",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "HfV2ZrSe5V10YFp",
    "output_index": 1,
    "sequence_number": 11,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " red",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "TOPe8qt0jf7i",
    "output_index": 1,
    "sequence_number": 12,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "/or",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "M8wezGfvkGyW9",
    "output_index": 1,
    "sequence_number": 13,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "ange",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "0Xssdu0j39Oe",
    "output_index": 1,
    "sequence_number": 14,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " at",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "idOn23lcciQYz",
    "output_index": 1,
    "sequence_number": 15,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " sunrise",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "NLys57YO",
    "output_index": 1,
    "sequence_number": 16,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " and",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "TiS1sMSVX8Wi",
    "output_index": 1,
    "sequence_number": 17,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " sunset",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "9O687daL3",
    "output_index": 1,
    "sequence_number": 18,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "TPwmI3GJcHEw1gt",
    "output_index": 1,
    "sequence_number": 19,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " gray",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "QuvTUTNyxzY",
    "output_index": 1,
    "sequence_number": 20,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " when",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "0S4gMpk3UU3",
    "output_index": 1,
    "sequence_number": 21,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " over",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "e1rfUzQ4cqW",
    "output_index": 1,
    "sequence_number": 22,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": "cast",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "FIC7b6AViOTZ",
    "output_index": 1,
    "sequence_number": 23,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ",",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "BTdtdBrdnn5P5jM",
    "output_index": 1,
    "sequence_number": 24,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " and",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "q75kIYqvEUYU",
    "output_index": 1,
    "sequence_number": 25,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " black",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "MnURALaslq",
    "output_index": 1,
    "sequence_number": 26,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " at",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "ThgkPep2ldBrX",
    "output_index": 1,
    "sequence_number": 27,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": " night",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "OiCjV5m7Mh",
    "output_index": 1,
    "sequence_number": 28,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "delta": ".",
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "obfuscation": "5vPteqlXqeMT1uz",
    "output_index": 1,
    "sequence_number": 29,
    "type": "response.output_text.delta",
  },
  {
    "content_index": 0,
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "logprobs": [],
    "output_index": 1,
    "sequence_number": 30,
    "text": "Usually blue during the day; red/orange at sunrise and sunset, gray when overcast, and black at night.",
    "type": "response.output_text.done",
  },
  {
    "content_index": 0,
    "item_id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
    "output_index": 1,
    "part": {
      "annotations": [],
      "logprobs": [],
      "text": "Usually blue during the day; red/orange at sunrise and sunset, gray when overcast, and black at night.",
      "type": "output_text",
    },
    "sequence_number": 31,
    "type": "response.content_part.done",
  },
  {
    "item": {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "Usually blue during the day; red/orange at sunrise and sunset, gray when overcast, and black at night.",
          "type": "output_text",
        },
      ],
      "id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
    "output_index": 1,
    "sequence_number": 32,
    "type": "response.output_item.done",
  },
  {
    "response": {
      "background": false,
      "created_at": 1762860556,
      "error": null,
      "id": "resp_05e9f6e35bff13970069131e0c3d6881a0a0a473b7052b7b42",
      "incomplete_details": null,
      "instructions": "reply concisely",
      "max_output_tokens": null,
      "max_tool_calls": null,
      "metadata": {},
      "model": "gpt-5-2025-08-07",
      "object": "response",
      "output": [
        {
          "id": "rs_05e9f6e35bff13970069131e0c7fac81a099cb84a46c036f3e",
          "summary": [],
          "type": "reasoning",
        },
        {
          "content": [
            {
              "annotations": [],
              "logprobs": [],
              "text": "Usually blue during the day; red/orange at sunrise and sunset, gray when overcast, and black at night.",
              "type": "output_text",
            },
          ],
          "id": "msg_05e9f6e35bff13970069131e0f647081a0a16827cc22d1adb9",
          "role": "assistant",
          "status": "completed",
          "type": "message",
        },
      ],
      "parallel_tool_calls": true,
      "previous_response_id": null,
      "prompt_cache_key": null,
      "prompt_cache_retention": null,
      "reasoning": {
        "effort": "medium",
        "summary": null,
      },
      "safety_identifier": null,
      "service_tier": "default",
      "status": "completed",
      "store": true,
      "temperature": 1,
      "text": {
        "format": {
          "type": "text",
        },
        "verbosity": "medium",
      },
      "tool_choice": "auto",
      "tools": [],
      "top_logprobs": 0,
      "top_p": 1,
      "truncation": "disabled",
      "usage": {
        "input_tokens": 20,
        "input_tokens_details": {
          "cached_tokens": 0,
        },
        "output_tokens": 158,
        "output_tokens_details": {
          "reasoning_tokens": 128,
        },
        "total_tokens": 178,
      },
      "user": null,
    },
    "sequence_number": 33,
    "type": "response.completed",
  },
]
`;

exports[`openai > openai responses stream > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "what color is the sky?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.request.model": "gpt-5",
      "gen_ai.response.id": "resp_05e9f6e35bff13970069131e0c3d6881a0a0a473b7052b7b42",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.input_tokens": 20,
      "gen_ai.usage.output_tokens": 158,
      "http.request.header.accept": "application/json",
      "http.request.header.authorization": "Bearer healthy",
      "http.request.header.content-length": "114",
      "http.request.header.content-type": "application/json",
      "http.request.header.user-agent": "OpenAI/JS 4.104.0",
      "http.request.header.x-stainless-arch": "unknown",
      "http.request.header.x-stainless-lang": "js",
      "http.request.header.x-stainless-os": "Unknown",
      "http.request.header.x-stainless-package-version": "4.104.0",
      "http.request.header.x-stainless-retry-count": "0",
      "http.request.header.x-stainless-runtime": "unknown",
      "http.request.header.x-stainless-runtime-version": "unknown",
      "http.request.header.x-stainless-timeout": "600",
      "http.request.method": "POST",
      "http.response.header.content-type": "text/event-stream; charset=utf-8",
      "http.response.header.server": "uvicorn",
      "http.response.header.transfer-encoding": "chunked",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.system":{"type":"string"},"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.response.model":{"type":"string"},"gen_ai.response.id":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.output_tokens":{"type":"number"},"http.request.method":{"type":"string"},"url.full":{"type":"string"},"http.request.header.accept":{"type":"string"},"http.request.header.authorization":{"type":"string"},"http.request.header.content-length":{"type":"string"},"http.request.header.content-type":{"type":"string"},"http.request.header.user-agent":{"type":"string"},"http.request.header.x-stainless-arch":{"type":"string"},"http.request.header.x-stainless-lang":{"type":"string"},"http.request.header.x-stainless-os":{"type":"string"},"http.request.header.x-stainless-package-version":{"type":"string"},"http.request.header.x-stainless-retry-count":{"type":"string"},"http.request.header.x-stainless-runtime":{"type":"string"},"http.request.header.x-stainless-runtime-version":{"type":"string"},"http.request.header.x-stainless-timeout":{"type":"string"},"http.response.status_code":{"type":"number"},"http.response.header.content-type":{"type":"string"},"http.response.header.server":{"type":"string"},"http.response.header.transfer-encoding":{"type":"string"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5",
      "url.full": "https://example.com/responses/responses",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`openai > openai responses with builtin tools > llm 1`] = `
{
  "background": false,
  "billing": {
    "payer": "developer",
  },
  "created_at": 1762860509,
  "error": null,
  "id": "resp_082fa8e15dcf68ca0069131ddd1d5c81a3a39abf96937660d6",
  "incomplete_details": null,
  "instructions": "be precise",
  "max_output_tokens": null,
  "max_tool_calls": null,
  "metadata": {},
  "model": "gpt-5-2025-08-07",
  "object": "response",
  "output": [
    {
      "id": "rs_082fa8e15dcf68ca0069131ddfa7c881a3a87573df0d17a16c",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "import math, decimal
n=123_902_139_123
math.sqrt(n)",
      "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
      "id": "ci_082fa8e15dcf68ca0069131de4a57081a3853a6508c3cb6979",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_082fa8e15dcf68ca0069131de8f87081a3ac0520569a5e815a",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "from decimal import Decimal, getcontext
getcontext().prec=50
n=Decimal(123902139123)
root=n.sqrt()
root",
      "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
      "id": "ci_082fa8e15dcf68ca0069131deb218081a38a044aec98c3a573",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_082fa8e15dcf68ca0069131dece9d081a384f0196dc03e48fe",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "import math
n=123_902_139_123
s=math.isqrt(n)
s, s*s <= n, (s+1)*(s+1) > n",
      "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
      "id": "ci_082fa8e15dcf68ca0069131ded86a481a387440dca19cae123",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_082fa8e15dcf68ca0069131defa9d881a3b2d13641a81cda7b",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "s=351_997
s*s, (s+1)*(s+1)",
      "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
      "id": "ci_082fa8e15dcf68ca0069131df3779081a3a5bd846478776ed5",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_082fa8e15dcf68ca0069131df5529881a397fd0df21324c748",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "from decimal import Decimal, getcontext, ROUND_HALF_UP
getcontext().prec=60
n=Decimal(123902139123)
root=n.sqrt()
# format to 18 decimal places
q = Decimal('0.000000000000000001')
rounded = root.quantize(q, rounding=ROUND_HALF_UP)
str(rounded)",
      "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
      "id": "ci_082fa8e15dcf68ca0069131df91d7081a3a476c5035db491f9",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_082fa8e15dcf68ca0069131dfb9a4081a3b484fe739baa5f9b",
      "summary": [],
      "type": "reasoning",
    },
    {
      "code": "from decimal import Decimal, getcontext, ROUND_HALF_UP
getcontext().prec=60
n=Decimal(123902139123)
root=n.sqrt()
q=Decimal('0.000000000001')
root.quantize(q, rounding=ROUND_HALF_UP)",
      "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
      "id": "ci_082fa8e15dcf68ca0069131dfc81a081a3a67254f5f6980c48",
      "outputs": null,
      "status": "completed",
      "type": "code_interpreter_call",
    },
    {
      "id": "rs_082fa8e15dcf68ca0069131dfed1f481a3a609fcee50c39467",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "annotations": [],
          "logprobs": [],
          "text": "The square root of 123902139123 is approximately 351,997.356698882044317918.",
          "type": "output_text",
        },
      ],
      "id": "msg_082fa8e15dcf68ca0069131e07c83c81a3ac749c5a0ecdbdc9",
      "role": "assistant",
      "status": "completed",
      "type": "message",
    },
  ],
  "output_text": "The square root of 123902139123 is approximately 351,997.356698882044317918.",
  "parallel_tool_calls": true,
  "previous_response_id": null,
  "prompt_cache_key": null,
  "prompt_cache_retention": null,
  "reasoning": {
    "effort": "medium",
    "summary": null,
  },
  "safety_identifier": null,
  "service_tier": "default",
  "status": "completed",
  "store": true,
  "temperature": 1,
  "text": {
    "format": {
      "type": "text",
    },
    "verbosity": "medium",
  },
  "tool_choice": "auto",
  "tools": [
    {
      "container": {
        "type": "auto",
      },
      "type": "code_interpreter",
    },
  ],
  "top_logprobs": 0,
  "top_p": 1,
  "truncation": "disabled",
  "usage": {
    "input_tokens": 1879,
    "input_tokens_details": {
      "cached_tokens": 0,
    },
    "output_tokens": 1053,
    "output_tokens_details": {
      "reasoning_tokens": 1024,
    },
    "pydantic_ai_gateway": {
      "cost_estimate": 0.01287875,
    },
    "total_tokens": 2932,
  },
  "user": null,
}
`;

exports[`openai > openai responses with builtin tools > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.input.messages": [
        {
          "parts": [
            {
              "content": "what's the root square of 123902139123?",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
      "gen_ai.operation.name": "chat",
      "gen_ai.output.messages": [
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "import math, decimal
n=123_902_139_123
math.sqrt(n)",
                "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
                "id": "ci_082fa8e15dcf68ca0069131de4a57081a3853a6508c3cb6979",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "from decimal import Decimal, getcontext
getcontext().prec=50
n=Decimal(123902139123)
root=n.sqrt()
root",
                "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
                "id": "ci_082fa8e15dcf68ca0069131deb218081a38a044aec98c3a573",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "import math
n=123_902_139_123
s=math.isqrt(n)
s, s*s <= n, (s+1)*(s+1) > n",
                "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
                "id": "ci_082fa8e15dcf68ca0069131ded86a481a387440dca19cae123",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "s=351_997
s*s, (s+1)*(s+1)",
                "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
                "id": "ci_082fa8e15dcf68ca0069131df3779081a3a5bd846478776ed5",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "from decimal import Decimal, getcontext, ROUND_HALF_UP
getcontext().prec=60
n=Decimal(123902139123)
root=n.sqrt()
# format to 18 decimal places
q = Decimal('0.000000000000000001')
rounded = root.quantize(q, rounding=ROUND_HALF_UP)
str(rounded)",
                "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
                "id": "ci_082fa8e15dcf68ca0069131df91d7081a3a476c5035db491f9",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "part": {
                "code": "from decimal import Decimal, getcontext, ROUND_HALF_UP
getcontext().prec=60
n=Decimal(123902139123)
root=n.sqrt()
q=Decimal('0.000000000001')
root.quantize(q, rounding=ROUND_HALF_UP)",
                "container_id": "cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03",
                "id": "ci_082fa8e15dcf68ca0069131dfc81a081a3a67254f5f6980c48",
                "outputs": {},
                "status": "completed",
                "type": "code_interpreter_call",
              },
              "type": "unknown",
            },
          ],
          "role": "assistant",
        },
        {
          "parts": [],
          "role": "assistant",
        },
        {
          "parts": [
            {
              "content": "The square root of 123902139123 is approximately 351,997.356698882044317918.",
              "type": "text",
            },
          ],
          "role": "assistant",
        },
      ],
      "gen_ai.request.max_tokens": {},
      "gen_ai.request.model": "gpt-5",
      "gen_ai.request.seed": {},
      "gen_ai.request.stop_sequences": {},
      "gen_ai.request.temperature": {},
      "gen_ai.request.top_k": {},
      "gen_ai.request.top_p": {},
      "gen_ai.response.finish_reasons": {},
      "gen_ai.response.id": "resp_082fa8e15dcf68ca0069131ddd1d5c81a3a39abf96937660d6",
      "gen_ai.response.model": "gpt-5-2025-08-07",
      "gen_ai.system": "openai",
      "gen_ai.system_instructions": {},
      "gen_ai.usage.cache_audio_read_tokens": {},
      "gen_ai.usage.cache_read_tokens": 0,
      "gen_ai.usage.cache_write_tokens": {},
      "gen_ai.usage.input_audio_tokens": {},
      "gen_ai.usage.input_tokens": 1879,
      "gen_ai.usage.output_audio_tokens": {},
      "gen_ai.usage.output_tokens": 1053,
      "http.request.body.text": "{
  "model": "gpt-5",
  "instructions": "be precise",
  "input": "what's the root square of 123902139123?",
  "tools": [
    {
      "type": "code_interpreter",
      "container": {
        "type": "auto"
      }
    }
  ]
}",
      "http.response.body.text": "{"id":"resp_082fa8e15dcf68ca0069131ddd1d5c81a3a39abf96937660d6","object":"response","created_at":1762860509,"status":"completed","background":false,"billing":{"payer":"developer"},"error":null,"incomplete_details":null,"instructions":"be precise","max_output_tokens":null,"max_tool_calls":null,"model":"gpt-5-2025-08-07","output":[{"id":"rs_082fa8e15dcf68ca0069131ddfa7c881a3a87573df0d17a16c","type":"reasoning","summary":[]},{"id":"ci_082fa8e15dcf68ca0069131de4a57081a3853a6508c3cb6979","type":"code_interpreter_call","status":"completed","code":"import math, decimal\\r\\nn=123_902_139_123\\r\\nmath.sqrt(n)","container_id":"cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03","outputs":null},{"id":"rs_082fa8e15dcf68ca0069131de8f87081a3ac0520569a5e815a","type":"reasoning","summary":[]},{"id":"ci_082fa8e15dcf68ca0069131deb218081a38a044aec98c3a573","type":"code_interpreter_call","status":"completed","code":"from decimal import Decimal, getcontext\\r\\ngetcontext().prec=50\\r\\nn=Decimal(123902139123)\\r\\nroot=n.sqrt()\\r\\nroot","container_id":"cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03","outputs":null},{"id":"rs_082fa8e15dcf68ca0069131dece9d081a384f0196dc03e48fe","type":"reasoning","summary":[]},{"id":"ci_082fa8e15dcf68ca0069131ded86a481a387440dca19cae123","type":"code_interpreter_call","status":"completed","code":"import math\\r\\nn=123_902_139_123\\r\\ns=math.isqrt(n)\\r\\ns, s*s <= n, (s+1)*(s+1) > n","container_id":"cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03","outputs":null},{"id":"rs_082fa8e15dcf68ca0069131defa9d881a3b2d13641a81cda7b","type":"reasoning","summary":[]},{"id":"ci_082fa8e15dcf68ca0069131df3779081a3a5bd846478776ed5","type":"code_interpreter_call","status":"completed","code":"s=351_997\\r\\ns*s, (s+1)*(s+1)","container_id":"cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03","outputs":null},{"id":"rs_082fa8e15dcf68ca0069131df5529881a397fd0df21324c748","type":"reasoning","summary":[]},{"id":"ci_082fa8e15dcf68ca0069131df91d7081a3a476c5035db491f9","type":"code_interpreter_call","status":"completed","code":"from decimal import Decimal, getcontext, ROUND_HALF_UP\\r\\ngetcontext().prec=60\\r\\nn=Decimal(123902139123)\\r\\nroot=n.sqrt()\\r\\n# format to 18 decimal places\\r\\nq = Decimal('0.000000000000000001')\\r\\nrounded = root.quantize(q, rounding=ROUND_HALF_UP)\\r\\nstr(rounded)","container_id":"cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03","outputs":null},{"id":"rs_082fa8e15dcf68ca0069131dfb9a4081a3b484fe739baa5f9b","type":"reasoning","summary":[]},{"id":"ci_082fa8e15dcf68ca0069131dfc81a081a3a67254f5f6980c48","type":"code_interpreter_call","status":"completed","code":"from decimal import Decimal, getcontext, ROUND_HALF_UP\\r\\ngetcontext().prec=60\\r\\nn=Decimal(123902139123)\\r\\nroot=n.sqrt()\\r\\nq=Decimal('0.000000000001')\\r\\nroot.quantize(q, rounding=ROUND_HALF_UP)","container_id":"cntr_69131ddf2c9481919aeb6463f689d10d080191d2eca8fa03","outputs":null},{"id":"rs_082fa8e15dcf68ca0069131dfed1f481a3a609fcee50c39467","type":"reasoning","summary":[]},{"id":"msg_082fa8e15dcf68ca0069131e07c83c81a3ac749c5a0ecdbdc9","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"The square root of 123902139123 is approximately 351,997.356698882044317918."}],"role":"assistant"}],"parallel_tool_calls":true,"previous_response_id":null,"prompt_cache_key":null,"prompt_cache_retention":null,"reasoning":{"effort":"medium","summary":null},"safety_identifier":null,"service_tier":"default","store":true,"temperature":1,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[{"type":"code_interpreter","container":{"type":"auto"}}],"top_logprobs":0,"top_p":1,"truncation":"disabled","usage":{"input_tokens":1879,"input_tokens_details":{"cached_tokens":0},"output_tokens":1053,"output_tokens_details":{"reasoning_tokens":1024},"total_tokens":2932,"pydantic_ai_gateway":{"cost_estimate":0.01287875}},"user":null,"metadata":{}}",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.operation.name":{"type":"string"},"gen_ai.request.model":{"type":"string"},"gen_ai.system":{"type":"string"},"gen_ai.request.max_tokens":{},"gen_ai.request.top_k":{},"gen_ai.request.top_p":{},"gen_ai.request.temperature":{},"gen_ai.request.stop_sequences":{},"gen_ai.request.seed":{},"gen_ai.response.finish_reasons":{},"gen_ai.response.id":{"type":"string"},"gen_ai.input.messages":{},"gen_ai.output.messages":{},"gen_ai.system_instructions":{},"http.response.status_code":{"type":"number"},"http.request.body.text":{"type":"string"},"http.response.body.text":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.cache_read_tokens":{"type":"number"},"gen_ai.usage.cache_write_tokens":{},"gen_ai.usage.output_tokens":{"type":"number"},"gen_ai.usage.input_audio_tokens":{},"gen_ai.usage.cache_audio_read_tokens":{},"gen_ai.usage.output_audio_tokens":{}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat gpt-5-2025-08-07",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat gpt-5-2025-08-07",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;
